syntax = "proto3";

package sekai.db;

import "sekai/db/proto/descriptor.proto";

message CardRarity {
  option (master_db_file) = "cardRarities.json";
  enum CardRarityType {
    UNKNOWN_CARD_RARITY_TYPE = 0;
    RARITY_1                 = 1 [(json_value) = "rarity_1"];
    RARITY_2                 = 2 [(json_value) = "rarity_2"];
    RARITY_3                 = 3 [(json_value) = "rarity_3"];
    RARITY_4                 = 4 [(json_value) = "rarity_4"];
    RARITY_BIRTHDAY          = 5 [(json_value) = "rarity_birthday"];
  }

  optional CardRarityType card_rarity_type = 1 [(json_name) = "cardRarityType"];
  optional int32 seq                       = 2 [(json_name) = "seq"];
  optional int32 max_level                 = 3 [(json_name) = "maxLevel"];
  optional int32 max_skill_level           = 4 [(json_name) = "maxSkillLevel"];
  optional int32 training_max_level        = 5 [(json_name) = "trainingMaxLevel"];
}
